--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -921,6 +921,7 @@ DashboardScreen As screen:
                         Clear(LeadImagesCollection);
                         Set(VarcontractRecord,Blank());
                         Set(VarformattedNumber,Blank());
+                        Set(VarCommunication,false);
                         Navigate(CreatLeadScreen);
                         Set(
                                 VarIndicator,
