--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -580,6 +580,7 @@ ScopeScreen As screen:
                     StarVisibleScopeofwork As label:
                         Align: =Align.Center
                         Color: =RGBA(255, 0, 0, 1)
+                        Font: =Font.Arial
                         Height: =CboxScopeofwork.Height
                         Size: =21
                         Text: ="*"
