--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -472,6 +472,7 @@ UnitScreen As screen:
                     StarVisibleUnitCount As label:
                         Align: =Align.Center
                         Color: =RGBA(255, 0, 0, 1)
+                        Font: =Font.Arial
                         Height: =IntxtUnitCount.Height
                         Size: =21
                         Text: ="*"
@@ -564,6 +565,7 @@ UnitScreen As screen:
                     StarVisibleUnitDescription As label:
                         Align: =Align.Center
                         Color: =RGBA(255, 0, 0, 1)
+                        Font: =Font.Arial
                         Height: =IntxtUnitDescription.Height
                         Size: =21
                         Text: ="*"
