--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -847,7 +847,7 @@ EstimateScreen As screen:
                     borderCustomerName As rectangle:
                         BorderColor: =RGBA(237, 237, 237, 1)
                         Fill: =RGBA(237, 237, 237, 1)
-                        Height: =96
+                        Height: =Parent.Height
                         Width: =Parent.Width-20
                         ZIndex: =1
 
@@ -944,7 +944,7 @@ EstimateScreen As screen:
                     borderCustomerContactES As rectangle:
                         BorderColor: =RGBA(237, 237, 237, 1)
                         Fill: =RGBA(237, 237, 237, 1)
-                        Height: =96
+                        Height: =Parent.Height
                         Width: =Parent.Width-20
                         ZIndex: =1
 
