--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -170,20 +170,22 @@ DashboardScreen As screen:
                 PaddingRight: =0
                 Size: =If(Parent.Width>500,16,Parent.Width<500,14,12)
                 Text: ="Time Span"
-                Width: =If(Parent.Width<500,Parent.Width/2,Parent.Width/3)
+                Width: =If(Parent.Width<500,Parent.Width/2.5,Parent.Width/3)
                 X: =Parent.X
                 ZIndex: =4
 
             lblyearDS As label:
-                Color: =RGBA(255, 255, 255, 1)
+                Align: =Align.Right
                 Font: =Font.Arial
                 Height: =Parent.Height
-                PaddingLeft: =0
+                PaddingLeft: =20
                 PaddingRight: =0
-                Size: =If(Parent.Width>500,18,Parent.Width<500,12,12)
-                Text: =If(cumulatively=true,Year(Now())-10 & "-" & Year(Now()),yearly=true,Year(Now()))
-                Visible: =false
-                Width: =Parent.Width/3
+                Size: =If(Parent.Width>500,16,Parent.Width<500,14,12)
+                Text: |-
+                    =If(cumulatively=true,LookUp(LeadInformations,MechanicName=User().FullName,Year('Created On')) &"-"& Year(Now())
+                     ,yearly=true,Year(Now()))
+                Width: =Parent.Width/2.8
+                X: =lblUserNameDS.X+lblUserNameDS.Width
                 ZIndex: =6
 
             ctnYearToggleDS As groupContainer.horizontalAutoLayoutContainer:
@@ -199,8 +201,8 @@ DashboardScreen As screen:
                 RadiusBottomRight: =0
                 RadiusTopLeft: =0
                 RadiusTopRight: =0
-                Width: =Parent.Width-lblUserNameDS.Width-Parent.X
-                X: =lblUserNameDS.X+lblUserNameDS.Width
+                Width: =Parent.Width/4
+                X: =lblyearDS.X+lblyearDS.Width
                 ZIndex: =7
 
                 toggleYearDS As toggleSwitch:
@@ -225,11 +227,14 @@ DashboardScreen As screen:
                         =//for yearly record
                         Set(yearly,false);
                         Set(cumulatively,true);
+                    ShowLabel: =false
                     Size: =If(Parent.Width>500,18,Parent.Width<500,12,12)
                     TextPosition: =TextPosition.Left
                     TrueFill: =RGBA(255, 0, 0, 1)
                     TrueText: =Year(Now())
-                    Width: =If(Parent.Width<1000,Parent.Width/1.2,Parent.Width>1000,Parent.Width/10,Parent.Width>2000,Parent.Width)
+                    Width: |-
+                        =//If(Parent.Width<1000,Parent.Width/1.2,Parent.Width>1000,Parent.Width/10,Parent.Width>2000,Parent.Width)
+                        Parent.Width/2
                     X: =lblUserNameDS.X+lblUserNameDS.Width
                     ZIndex: =1
 
